// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> should render a disabled RadioField 1`] = `
<div>
  <label
    class="label isDisabled label"
    for="japanese"
  >
    <input
      class="input"
      disabled=""
      id="japanese"
      type="radio"
    />
    sushis and sashimis
  </label>
</div>
`;

exports[`<RadioButton /> should render an enabled Radio field 1`] = `
<div>
  <label
    class="label label"
    for="japanese"
  >
    <input
      class="input"
      id="japanese"
      type="radio"
    />
    sushis and sashimis
  </label>
</div>
`;

exports[`<RadioButton /> should render captions under radio button 1`] = `
<div>
  <label
    class="label label"
    for="japanese"
  >
    <input
      class="input"
      id="japanese"
      type="radio"
    />
    sushis and sashimis
  </label>
  <div
    class="caption caption"
  >
    delicious
  </div>
</div>
`;
